# python-website

./: README.md  main.py  md2html.py  pyproject.toml
md/: tillampningar.md  verktyg.md
public_html/: fortsattning.html  grunder.html  index.html  tillampningar.html  utveckling.html
public_html/css/: main.css
public_html/data/: movies.json  programming_terms.json
public_html/js/: main.js
public_html/js/processing/: bingrid.js  nodetree.js  p5bg.js  pyramis.js
templates/: main.html
wip/: html_snippets_html
wip/backup/: old_main.css
